deploy: 25671bab18b84544364056edf7bd19343f640bb2

--- a/exercise/02_03_Basics_of_Python_function.html
+++ b/exercise/02_03_Basics_of_Python_function.html
@@ -369,7 +369,7 @@ document.write(`
 </thead>
 <tbody>
 <tr class="row-even"><td class="text-center"><p>引数</p></td>
-<td class="text-left"><p>関数 <code class="docutils literal notranslate"><span class="pre">f</span></code>, 区間下限 <code class="docutils literal notranslate"><span class="pre">a</span></code>, 区間上限 <code class="docutils literal notranslate"><span class="pre">b</span></code>, 区間分割数 <code class="docutils literal notranslate"><span class="pre">n</span></code> <br> （ただし、n のデフォルト値は <code class="docutils literal notranslate"><span class="pre">100</span></code> とする）</p></td>
+<td class="text-left"><p>関数 <code class="docutils literal notranslate"><span class="pre">f</span></code>, 区間下限 <code class="docutils literal notranslate"><span class="pre">a</span></code>, 区間上限 <code class="docutils literal notranslate"><span class="pre">b</span></code>, 区間分割数 <code class="docutils literal notranslate"><span class="pre">n</span></code> <br> （ただし、<code class="docutils literal notranslate"><span class="pre">a</span></code> のデフォルト値を 0、<code class="docutils literal notranslate"><span class="pre">b</span></code> のデフォルト値を 1、<code class="docutils literal notranslate"><span class="pre">n</span></code> のデフォルト値を <code class="docutils literal notranslate"><span class="pre">100</span></code> にそれぞれ設定する）</p></td>
 </tr>
 <tr class="row-odd"><td class="text-center"><p>処理</p></td>
 <td class="text-left"><p>与えられた分割数 <code class="docutils literal notranslate"><span class="pre">n</span></code> の下で、関数 <code class="docutils literal notranslate"><span class="pre">f</span></code> を区間 <code class="docutils literal notranslate"><span class="pre">[a,</span> <span class="pre">b]</span></code> で台形積分する</p></td>
